2008-04-04 Alasdair Allan <aa@astro.ex.ac.uk>

	* www/robonet-1.0 & www/estar: Added GeochronApplet.jar and associated
	  jpeg files into the two web directories
	  
	* bin/.cvsignore: Added .DS_Store to ignore list.  

2008-03-25 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/test_servers.pl: Updated to FTP end point to estar.org.uk
	
	* bin/raptor_alert.pl: Updated to FTP end point to estar.org.uk

	* bin/event_broker.pl: Updated to FTP end point to estar.org.uk
		
	* eSTAR/Broker/Handler.pm: Updated to FTP end point to estar.org.uk

	* demo/google_sky/event_client.pl: Updated to FTP end point

2008-03-19 Eric Saunders <saunders@astro.ex.ac.uk>

        * eSTAR/VT/Handler.pm, eSTAR/VT.pm: Abstracted functionality not 
          directly associated with handling into new class eSTAR::VT. This will
          allow generic virtual telescope functionality independent of
          infrastructure implementation.


2008-03-19 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/UA/Handler.pm: Modified text for GSM alerts.

2008-03-18 Eric Saunders <saunders@astro.ex.ac.uk>

        * bin/time_server.pl: Upgraded to allow arbitrary start time. Fixed to
        allow simulations beginning in the past to be run correctly when
        accelerated.

2008-03-18 Alasdair Allan <aa@astro.ex.ac.uk>

	* eSTAR/UA/Handler.pm: Added GSM alerts for Nial Tanvir

2008-03-17 Eric Saunders <saunders@astro.ex.ac.uk>

        * eSTAR/NA/Handler.pm, eSTAR/RAPTOR/Handler.pm, eSTAR/VT/Handler.pm, 
        eSTAR/JACH/Handler.pm, eSTAR/NA/Handler.pm, eSTAR/RAPTOR/Handler.pm,
        eSTAR/VT/Handler.pm, eSTAR/JACH/Handler.pm: Removed obsolete 
        eSTAR::LDAP::Search dependency from all handlers. 

2008-03-17 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/user_agent.pl: Moved default list of node agents to first start
	  only. Won't update unless this is the first run.
	  
	* bin/soap_client.pl: Hacked about to talk to Java NodeAgent. Needs
	  rewriting from scratch at some point.  
	  