@@ -1,3 +1,7 @@
+2008-04-05 Alasdair Allan <aa@astro.ex.ac.uk>
+
+	* bin/event_broker.pl: Added twittering
+	
 2008-04-04 Alasdair Allan <aa@astro.ex.ac.uk>
 
 	* www/robonet-1.0 & www/estar: Added GeochronApplet.jar and associated
